// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quote list inside should identify list inside the quote 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> - one
> - two",
    "tokens": Array [
      Object {
        "indent": 0,
        "items": Array [
          Object {
            "checked": null,
            "count": null,
            "raw": " - one",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": "one",
                "tokens": Array [
                  Object {
                    "raw": "one",
                    "type": "text",
                    "value": "one",
                  },
                ],
                "type": "paragraph",
                "value": "one",
              },
            ],
            "type": "list-item",
          },
          Object {
            "checked": null,
            "count": null,
            "raw": " - two",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": "two",
                "tokens": Array [
                  Object {
                    "raw": "two",
                    "type": "text",
                    "value": "two",
                  },
                ],
                "type": "paragraph",
                "value": "two",
              },
            ],
            "type": "list-item",
          },
        ],
        "meta": Object {
          "checklist": false,
          "identifier": "-",
          "ordered": false,
        },
        "raw": " - one
 - two",
        "type": "list",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote list inside should identify list inside with multiple separator in between 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> - one
>
>
> - two",
    "tokens": Array [
      Object {
        "indent": 0,
        "items": Array [
          Object {
            "checked": null,
            "count": null,
            "raw": " - one",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": "one",
                "tokens": Array [
                  Object {
                    "raw": "one",
                    "type": "text",
                    "value": "one",
                  },
                ],
                "type": "paragraph",
                "value": "one",
              },
            ],
            "type": "list-item",
          },
          Object {
            "checked": null,
            "count": null,
            "raw": " - two",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": "two",
                "tokens": Array [
                  Object {
                    "raw": "two",
                    "type": "text",
                    "value": "two",
                  },
                ],
                "type": "paragraph",
                "value": "two",
              },
            ],
            "type": "list-item",
          },
        ],
        "meta": Object {
          "checklist": false,
          "identifier": "-",
          "ordered": false,
        },
        "raw": " - one
 - two",
        "type": "list",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote list inside should identify list inside with single separator in between 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> - one
>
> - two",
    "tokens": Array [
      Object {
        "indent": 0,
        "items": Array [
          Object {
            "checked": null,
            "count": null,
            "raw": " - one",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": "one",
                "tokens": Array [
                  Object {
                    "raw": "one",
                    "type": "text",
                    "value": "one",
                  },
                ],
                "type": "paragraph",
                "value": "one",
              },
            ],
            "type": "list-item",
          },
          Object {
            "checked": null,
            "count": null,
            "raw": " - two",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": "two",
                "tokens": Array [
                  Object {
                    "raw": "two",
                    "type": "text",
                    "value": "two",
                  },
                ],
                "type": "paragraph",
                "value": "two",
              },
            ],
            "type": "list-item",
          },
        ],
        "meta": Object {
          "checklist": false,
          "identifier": "-",
          "ordered": false,
        },
        "raw": " - one
 - two",
        "type": "list",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote list inside should include a braced codeblock inside 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> normal text
> \`\`\`
> code goes here
> \`\`\`
> normal text again",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " normal text",
        "tokens": Array [
          Object {
            "raw": " normal text",
            "type": "text",
            "value": " normal text",
          },
        ],
        "type": "paragraph",
        "value": " normal text",
      },
      Object {
        "indent": 0,
        "language": null,
        "raw": " \`\`\`
 code goes here
 \`\`\`",
        "type": "code-block",
        "value": "code goes here",
      },
      Object {
        "indent": 0,
        "raw": " normal text again",
        "tokens": Array [
          Object {
            "raw": " normal text again",
            "type": "text",
            "value": " normal text again",
          },
        ],
        "type": "paragraph",
        "value": " normal text again",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should allow laziness for plain paragraph 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> one quote
> two quote
three quote",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " one quote
 two quote
three quote",
        "tokens": Array [
          Object {
            "raw": " one quote  two quote three quote",
            "type": "text",
            "value": " one quote  two quote three quote",
          },
        ],
        "type": "paragraph",
        "value": " one quote  two quote three quote",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should chill with big quote head 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> > > three hit
> > two hit
>
>
> > two
> > # h-two
> > > three
> > > > four
some",
    "tokens": Array [
      Object {
        "depth": 1,
        "indent": 0,
        "raw": " > > three hit
 > two hit",
        "tokens": Array [
          Object {
            "depth": 1,
            "indent": 0,
            "raw": " > three hit
 two hit",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": " three hit
 two hit",
                "tokens": Array [
                  Object {
                    "raw": " three hit  two hit",
                    "type": "text",
                    "value": " three hit  two hit",
                  },
                ],
                "type": "paragraph",
                "value": " three hit  two hit",
              },
            ],
            "type": "quote",
          },
        ],
        "type": "quote",
      },
      Object {
        "type": "new-line",
      },
      Object {
        "depth": 1,
        "indent": 0,
        "raw": " > two
 > # h-two
 > > three
 > > > four
some",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": " two",
            "tokens": Array [
              Object {
                "raw": " two",
                "type": "text",
                "value": " two",
              },
            ],
            "type": "paragraph",
            "value": " two",
          },
          Object {
            "indent": 0,
            "level": 1,
            "raw": " # h-two",
            "tokens": Array [
              Object {
                "raw": "h-two",
                "type": "text",
                "value": "h-two",
              },
            ],
            "type": "heading",
            "value": "h-two",
          },
          Object {
            "depth": 1,
            "indent": 0,
            "raw": " > three
 > > four
some",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": " three",
                "tokens": Array [
                  Object {
                    "raw": " three",
                    "type": "text",
                    "value": " three",
                  },
                ],
                "type": "paragraph",
                "value": " three",
              },
              Object {
                "depth": 1,
                "indent": 0,
                "raw": " > four
some",
                "tokens": Array [
                  Object {
                    "indent": 0,
                    "raw": " four
some",
                    "tokens": Array [
                      Object {
                        "raw": " four some",
                        "type": "text",
                        "value": " four some",
                      },
                    ],
                    "type": "paragraph",
                    "value": " four some",
                  },
                ],
                "type": "quote",
              },
            ],
            "type": "quote",
          },
        ],
        "type": "quote",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '  > quote \`four\` with ~~five~~' 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "  > quote \`four\` with ~~five~~",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " quote \`four\` with ~~five~~",
        "tokens": Array [
          Object {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          Object {
            "raw": "\`four\`",
            "type": "code",
            "value": "four",
          },
          Object {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          Object {
            "raw": "~~five~~",
            "tokens": Array [
              Object {
                "raw": "five",
                "type": "text",
                "value": "five",
              },
            ],
            "type": "strike-through",
          },
        ],
        "type": "paragraph",
        "value": " quote \`four\` with ~~five~~",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote ' > > > quote \`four\` with ~~five~~' 1`] = `
Array [
  Object {
    "depth": 3,
    "indent": 0,
    "raw": " > > > quote \`four\` with ~~five~~",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " quote \`four\` with ~~five~~",
        "tokens": Array [
          Object {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          Object {
            "raw": "\`four\`",
            "type": "code",
            "value": "four",
          },
          Object {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          Object {
            "raw": "~~five~~",
            "tokens": Array [
              Object {
                "raw": "five",
                "type": "text",
                "value": "five",
              },
            ],
            "type": "strike-through",
          },
        ],
        "type": "paragraph",
        "value": " quote \`four\` with ~~five~~",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '' 1`] = `Array []`;

exports[`quote should deep tokenize quote '> > > > quote [link-title](link-url) with *two*' 1`] = `
Array [
  Object {
    "depth": 4,
    "indent": 0,
    "raw": "> > > > quote [link-title](link-url) with *two*",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " quote [link-title](link-url) with *two*",
        "tokens": Array [
          Object {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          Object {
            "raw": "[link-title](link-url)",
            "tokens": Object {
              "href": "link-url",
              "title": Object {
                "raw": "link-title",
                "tokens": Array [
                  Object {
                    "raw": "link-title",
                    "type": "text",
                    "value": "link-title",
                  },
                ],
              },
              "tooltip": undefined,
            },
            "type": "link",
          },
          Object {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          Object {
            "raw": "*two*",
            "tokens": Array [
              Object {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote [link-title](link-url) with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '> > quote **one** with *two*' 1`] = `
Array [
  Object {
    "depth": 2,
    "indent": 0,
    "raw": "> > quote **one** with *two*",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " quote **one** with *two*",
        "tokens": Array [
          Object {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          Object {
            "raw": "**one**",
            "tokens": Array [
              Object {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "bold",
          },
          Object {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          Object {
            "raw": "*two*",
            "tokens": Array [
              Object {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote **one** with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '> quote **one** with *two*' 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> quote **one** with *two*",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " quote **one** with *two*",
        "tokens": Array [
          Object {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          Object {
            "raw": "**one**",
            "tokens": Array [
              Object {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "bold",
          },
          Object {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          Object {
            "raw": "*two*",
            "tokens": Array [
              Object {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote **one** with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '> quote [link-title](link-url) with *two*' 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> quote [link-title](link-url) with *two*",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " quote [link-title](link-url) with *two*",
        "tokens": Array [
          Object {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          Object {
            "raw": "[link-title](link-url)",
            "tokens": Object {
              "href": "link-url",
              "title": Object {
                "raw": "link-title",
                "tokens": Array [
                  Object {
                    "raw": "link-title",
                    "type": "text",
                    "value": "link-title",
                  },
                ],
              },
              "tooltip": undefined,
            },
            "type": "link",
          },
          Object {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          Object {
            "raw": "*two*",
            "tokens": Array [
              Object {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote [link-title](link-url) with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should leave separators 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> one
> # two
>
>
>
> three",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " one",
        "tokens": Array [
          Object {
            "raw": " one",
            "type": "text",
            "value": " one",
          },
        ],
        "type": "paragraph",
        "value": " one",
      },
      Object {
        "indent": 0,
        "level": 1,
        "raw": " # two",
        "tokens": Array [
          Object {
            "raw": "two",
            "type": "text",
            "value": "two",
          },
        ],
        "type": "heading",
        "value": "two",
      },
      Object {
        "type": "new-line",
      },
      Object {
        "indent": 0,
        "raw": " three",
        "tokens": Array [
          Object {
            "raw": " three",
            "type": "text",
            "value": " three",
          },
        ],
        "type": "paragraph",
        "value": " three",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should lex multiline quote with the circular depth 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> one
> > two
> > > three
> > > > four
> > >
>>> r_three
> >
> > r_two
>
> r_one",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " one",
        "tokens": Array [
          Object {
            "raw": " one",
            "type": "text",
            "value": " one",
          },
        ],
        "type": "paragraph",
        "value": " one",
      },
      Object {
        "depth": 1,
        "indent": 0,
        "raw": " > two
 > > three
 > > > four
 > >
>> r_three
 >
 > r_two",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": " two",
            "tokens": Array [
              Object {
                "raw": " two",
                "type": "text",
                "value": " two",
              },
            ],
            "type": "paragraph",
            "value": " two",
          },
          Object {
            "depth": 1,
            "indent": 0,
            "raw": " > three
 > > four
 >
> r_three",
            "tokens": Array [
              Object {
                "indent": 0,
                "raw": " three",
                "tokens": Array [
                  Object {
                    "raw": " three",
                    "type": "text",
                    "value": " three",
                  },
                ],
                "type": "paragraph",
                "value": " three",
              },
              Object {
                "depth": 1,
                "indent": 0,
                "raw": " > four",
                "tokens": Array [
                  Object {
                    "indent": 0,
                    "raw": " four",
                    "tokens": Array [
                      Object {
                        "raw": " four",
                        "type": "text",
                        "value": " four",
                      },
                    ],
                    "type": "paragraph",
                    "value": " four",
                  },
                ],
                "type": "quote",
              },
              Object {
                "type": "new-line",
              },
              Object {
                "indent": 0,
                "raw": " r_three",
                "tokens": Array [
                  Object {
                    "raw": " r_three",
                    "type": "text",
                    "value": " r_three",
                  },
                ],
                "type": "paragraph",
                "value": " r_three",
              },
            ],
            "type": "quote",
          },
          Object {
            "type": "new-line",
          },
          Object {
            "indent": 0,
            "raw": " r_two",
            "tokens": Array [
              Object {
                "raw": " r_two",
                "type": "text",
                "value": " r_two",
              },
            ],
            "type": "paragraph",
            "value": " r_two",
          },
        ],
        "type": "quote",
      },
      Object {
        "type": "new-line",
      },
      Object {
        "indent": 0,
        "raw": " r_one",
        "tokens": Array [
          Object {
            "raw": " r_one",
            "type": "text",
            "value": " r_one",
          },
        ],
        "type": "paragraph",
        "value": " r_one",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should not be lazy with heading 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> one
> # two
> three",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " one",
        "tokens": Array [
          Object {
            "raw": " one",
            "type": "text",
            "value": " one",
          },
        ],
        "type": "paragraph",
        "value": " one",
      },
      Object {
        "indent": 0,
        "level": 1,
        "raw": " # two",
        "tokens": Array [
          Object {
            "raw": "two",
            "type": "text",
            "value": "two",
          },
        ],
        "type": "heading",
        "value": "two",
      },
      Object {
        "indent": 0,
        "raw": " three",
        "tokens": Array [
          Object {
            "raw": " three",
            "type": "text",
            "value": " three",
          },
        ],
        "type": "paragraph",
        "value": " three",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should not be lazy with heading 2`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> # one
> two
> three",
    "tokens": Array [
      Object {
        "indent": 0,
        "level": 1,
        "raw": " # one",
        "tokens": Array [
          Object {
            "raw": "one",
            "type": "text",
            "value": "one",
          },
        ],
        "type": "heading",
        "value": "one",
      },
      Object {
        "indent": 0,
        "raw": " two
 three",
        "tokens": Array [
          Object {
            "raw": " two  three",
            "type": "text",
            "value": " two  three",
          },
        ],
        "type": "paragraph",
        "value": " two  three",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should split with heading in between 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> one quote
> two quote",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " one quote
 two quote",
        "tokens": Array [
          Object {
            "raw": " one quote  two quote",
            "type": "text",
            "value": " one quote  two quote",
          },
        ],
        "type": "paragraph",
        "value": " one quote  two quote",
      },
    ],
    "type": "quote",
  },
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# three quote",
    "tokens": Array [
      Object {
        "raw": "three quote",
        "type": "text",
        "value": "three quote",
      },
    ],
    "type": "heading",
    "value": "three quote",
  },
]
`;

exports[`quote should split with new lines in between 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> one quote",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " one quote",
        "tokens": Array [
          Object {
            "raw": " one quote",
            "type": "text",
            "value": " one quote",
          },
        ],
        "type": "paragraph",
        "value": " one quote",
      },
    ],
    "type": "quote",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> two quote
three quote",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " two quote
three quote",
        "tokens": Array [
          Object {
            "raw": " two quote three quote",
            "type": "text",
            "value": " two quote three quote",
          },
        ],
        "type": "paragraph",
        "value": " two quote three quote",
      },
    ],
    "type": "quote",
  },
]
`;
